# ecommerce-test

./: .flake8  README.md  pyproject.toml  requirements.txt
.github/workflows/: code_check.yaml
.github/workflows/config/: .markdownlint.yml
notebook/: sales_predict.ipynb
src/ds/: __init__.py  entrypoint.py
src/ds/configs/: config-US.yml  config.yml
src/ds/core/: model.py  platform.py
src/ds/ml/: predict_sales.py
src/ds/schema/: base_schema.py  order_items.py  order_payments.py  orders.py  product.py  sales.py
src/ds/service/: base_service.py  sales_service.py
src/ds/spark_loader/: base_loader.py  order_items_loader.py  order_loader.py  order_payments_loader.py  product_loader.py
src/ds/spark_writer/: base_writer.py  spark_writer.py
src/ds/utils/: spark.py  toolkit.py
src/tests/core/: test_platform.py
src/tests/service/: conftest.py  test_sales_service.py
