[build-system]
requires = ["setuptools>=63.4.1", "pip >= 23.1", "setuptools-scm>=6.4.2,<7",]
build-backend = "setuptools.build_meta"

[project]
name = "ds"
authors = [
    {name = "Knight, Zhang", email = "zt_yht@163.com"}
]
description = "To forcast the sales."
requires-python = "==3.9.*"
keywords = ["DS"]
license = {text = "Proprietary"}
classifiers = [
    "Programming Language :: Python :: 3.9"
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
homepage = "https://github.com/knightzhang1314/ecommerce-test"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

# automatically find packages
[tool.setuptools.packages.find]
where = ["src"]
namespaces = true